Changed request header authorization field from X-Api-Key to Authorization. This is for future implementation of JWT auth.
