# api_server/swagger/sites.yaml
@@ -34,13 +34,30 @@ produces:
     - application/json
 
 security:
-    - internalApiKey: []
-
+    - Bearer: []
 securityDefinitions:
-    internalApiKey:
+    Bearer:
+        description: |
+            For accessing the API a valid JWT token must be passed in all the queries in
+            the 'Authorization' header.
+
+
+            A valid JWT token is generated by the API and retourned as answer of a call
+            to the route /login giving a valid user & password.
+
+
+            The following syntax must be used in the 'Authorization' header :
+
+                Bearer: xxxxxx.yyyyyyy.zzzzzz
         type: apiKey
+        name: Authorization
         in: header
-        name: X-Api-Key
+
+#securityDefinitions:
+#    internalApiKey:
+#        type: apiKey
+#        in: header
+#        name: X-Api-Key
 
 #tags:
 #    - name: Databases
